--- a/неология.ipynb
+++ b/неология.ipynb
@@ -2,19 +2,135 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Введите день: 16\n",
-      "Введите месяц: Июль\n",
-      "Ваш знак зодиака:  Рак\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "#задание 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "phrase_1 = 'Насколько проще было бы писать программы, если бы не заказчики'\n",
+    "phrase_2 = '640Кб должно хватить для любых задач. Билл Гейтс (по легенде)'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "phrase_1 = len(phrase_1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "phrase_2 = len(phrase_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if phrase_1 > phrase_2:\n",
+    "    print('Фраза 1 длиннее фразы 2')\n",
+    "elif  phrase_1 < phrase_2:\n",
+    "    print('Фраза 2 длиннее фразы 1')\n",
+    "else:\n",
+    "    print('Фразы равной длины')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#задание 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "year = 2007"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import calendar\n",
+    "print(calendar.isleap(year))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l_year = calendar.isleap(year)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if l_year is False:\n",
+    "    print('Обычный год')\n",
+    "else:\n",
+    "    print('Високосный год')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#задание 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "months = ['Январь', 'Февраль', 'Март', 'Апрель', 'Май', 'Июнь', 'Июль', 'Август', 'Сентябрь', 'Октябрь', 'Ноябрь', 'Декабрь']\n",
+    "bd_day = input('Введите день: ')\n",
+    "bd_month = input('Введите месяц: ')\n",
+    "\n",
+    "if not isinstance(bd_day, int):\n",
+    "    print('Вы ввели не число')\n",
+    "if not bd_month in months:\n",
+    "    print('Вы ввели несуществующий месяц')\n",
+    "print('Ваш знак зодиака: ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "months = ['Январь', 'Февраль', 'Март', 'Апрель', 'Май', 'Июнь', 'Июль', 'Август', 'Сентябрь', 'Октябрь', 'Ноябрь', 'Декабрь']\n",
     "\n",
@@ -63,35 +179,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#задание 4"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "width = 3\n",
     "length = 201\n",
     "height = 45\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Упаковка для лыж\n"
-     ]
-    }
-   ],
-   "source": [
+    "\n",
+    "\n",
     "box_list = [width, length, height]\n",
     "\n",
     "if all([i <= 15 for i in box_list]):\n",
